feat(coord): Use JDK21 features with reflection so we can try to run on JDK11 as well